--- a/night.css
+++ b/night.css
@@ -98,11 +98,14 @@ body {
   background-color: #333; /* 夜间模式的背景颜色 */
 
 }
-h1, h2, h3, h4, h5, h6 {
-  font-family: '黑体', 'SimHei', sans-serif;
-  font-weight: bold;
+/*hassa1, h2, h3, h4, h5, h6 {*/
+/*  color: #FFFFFF;*/
+/*  font-family: '黑体', 'SimHei', sans-serif;*/
+/*  fontc zvavas-weight: bold;*/
+/*}*/
+body h2{
+  color: unset;
 }
-
 /* 设置英文字体为 Times New Roman */
 body p, body li, body pre, body code {
   font-family: 'Times New Roman', Times, serif;
@@ -178,9 +181,6 @@ body {
 
 .katex-scriptscript {
     font-size: 0.6em; /* 设置 scriptscriptstyle 的大小 */
-}
-h1, h2, h3, h4, h5, h6 {
-  color: #fff !important; /* 夜间模式的标题颜色 */
 }
 /*.markdown-section pre {*/
 /*    border: 1px solid #555; !* 夜间模式的代码块边框颜色 *!*/
